# polyoracle

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.bot  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  agent_base.py  consensus.py  mean_reversion_agent.py  meta_learner.py  momentum_agent.py  oracle_agent.py  orderflow_agent.py  volatility_agent.py
core/: __init__.py  asset_config.py  asset_lane.py  clock.py  config.py  logger.py  main.py
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/components/agents/: AgentPanel.tsx
dashboard/components/layout/: Header.tsx
dashboard/components/markets/: MarketCard.tsx
dashboard/components/portfolio/: EquityCurve.tsx  Statistics.tsx
dashboard/hooks/: useBotState.ts  useWebSocket.ts
dashboard/lib/: constants.ts  types.ts  utils.ts
data/: __init__.py  aggregator.py  binance_ws.py  candle_builder.py  chainlink_oracle.py  gamma_api.py  polymarket_rest.py  polymarket_ws.py  trade_db.py
execution/: __init__.py  claimer.py  fee_calculator.py  order_manager.py  polymarket_executor.py  token_resolver.py  wallet.py
risk/: circuit_breaker.py  drawdown_monitor.py  exposure_manager.py  pnl_tracker.py  position_sizer.py
scripts/: backtest.py  check_balance.py  paper_trade.py  recover_claims.py  setup_wallet.py
strategy/: __init__.py  base.py  confidence.py  indicators.py  late_window.py  market_regime.py  signals.py
websocket_server/: __init__.py  server.py
(+3 files in other folders)
