[project]
name = "polyoracle"
version = "1.0.0"
description = "Autonomous Polymarket 5-minute BTC prediction market trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-clob-client>=0.18.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "web3>=6.15.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-json-logger>=2.0.7",
    "rich>=13.7.0",
    "click>=8.1.7",
    "ta>=0.11.0",
    "scipy>=1.12.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
polyoracle = "core.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
